<resources>
    <string name="app_name">AppLista</string>
    <string name="txt_titulo">Aplicativo Lista VIP devandroid.tiago.applista.model.Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso_desejado">Nome do devandroid.tiago.applista.model.Curso Desejado</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de Contato</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">finalizar</string>
</resources>